# lib-lidar

./: .gitignore  CMakeLists.txt  README.md  config.doxygen
.github/workflows/: main.yml
cmake/: dependencies.cmake
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/inc/: helpers.hpp.func-sort-c.html  helpers.hpp.func.html  helpers.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  scan.hpp.func-sort-c.html  scan.hpp.func.html  scan.hpp.gcov.html
coverage/inc/interfaces/: index-sort-f.html  index-sort-l.html  index.html  lidar.hpp.func-sort-c.html  (+5 more)
coverage/src/: helpers.cpp.func-sort-c.html  helpers.cpp.func.html  helpers.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lidar.cpp.func-sort-c.html  lidar.cpp.func.html  lidar.cpp.gcov.html  lidarfactory.cpp.func-sort-c.html  lidarfactory.cpp.func.html  lidarfactory.cpp.gcov.html  samples.cpp.func-sort-c.html  samples.cpp.func.html  samples.cpp.gcov.html  scan.cpp.func-sort-c.html  scan.cpp.func.html  scan.cpp.gcov.html  scanfactory.cpp.func-sort-c.html  scanfactory.cpp.func.html  scanfactory.cpp.gcov.html
examples/: CMakeLists.txt
examples/basic_scan/: CMakeLists.txt
examples/extended_scan/: CMakeLists.txt
inc/: helpers.hpp  lidar.hpp  lidarfactory.hpp  samples.hpp  scan.hpp
inc/interfaces/: lidar.hpp  samples.hpp  scan.hpp
src/: lidar.cpp  lidarfactory.cpp  samples.cpp  scan.cpp
tests/: CMakeLists.txt
tests/cmake/: dependencies.cmake
tests/logs/: CTestCostData.txt
tests/src/: test_helpers.cpp  test_lidar.cpp  test_samples.cpp  test_scan.cpp
(+475 files in other folders)
